--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -12,11 +12,16 @@
 @stext-color-2:fade(@primary-text-color, 50%);
 @stext-color-3:fade(@primary-text-color, 34%);
 @title-color:#FFFFFF;
+@base-background-color:#FFFFFF;
 @supplement-color1:#5BB473;
 @supplement-color2:#D46F6E;
 @supplement-color3:#DF9160;
 
 @input-height:48px;
+@base-font-size:48px;
+@base-cell-height:120px;
+@base-cel-width:1000px;
+@base-radius:32px;
 
 /*
   按钮
@@ -41,7 +46,7 @@
  cell
  */
 @cell-label-color:@primary-text-color;
-@cell-font-size:48px;
+//@cell-font-size:@base-font-size;
 //@cell-tips-font-size: 40px;
 //@cell-default-arrow-color: fade(@primary-text-color, 70%);
 //@cell-disabled-arrow-color: fade(@primary-text-color, 34%);
