--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -8,9 +8,9 @@
 @primary-color:#4769F5;
 @theme-color:@primary-color;
 @primary-text-color:#1C1C1C;
-@stext-color-1:fade(@primary-text-color, 70%);
-@stext-color-2:fade(@primary-text-color, 50%);
-@stext-color-3:fade(@primary-text-color, 34%);
+@text-color-1:fade(@primary-text-color, 70%);
+@text-color-2:fade(@primary-text-color, 50%);
+@text-color-3:fade(@primary-text-color, 34%);
 @title-color:#FFFFFF;
 @base-background-color:#FFFFFF;
 @supplement-color1:#5BB473;
@@ -46,7 +46,7 @@
  cell
  */
 @cell-label-color:@primary-text-color;
-//@cell-font-size:@base-font-size;
+@cell-font-size:@base-font-size;
 //@cell-tips-font-size: 40px;
 //@cell-default-arrow-color: fade(@primary-text-color, 70%);
 //@cell-disabled-arrow-color: fade(@primary-text-color, 34%);
@@ -54,3 +54,13 @@
 //@cell-default-arrow-width: 6px;
 @cell-value-color: red;
 //@cell-placeholder-color:red;
+
+
+/*
+顶部返回条
+ */
+@header-background-color:#E5EAF9;
+@header-title-color:#5F5F5F;
+@header-text-color:#5F5F5F;
+@header-arrow-color:#5F5F5F;
+
