--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -3,10 +3,11 @@
  */
 @import "./theme";
 
-html,body{
+html, body {
   height: 100%;
   margin: 0;
 }
+
 #app {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   font-size: @base-font-size;
@@ -83,7 +84,7 @@ html,body{
 
   /*  button  */
   .weui-btn {
-    &:after{
+    &:after {
       border: none;
     }
   }
@@ -101,6 +102,91 @@ html,body{
       color: #959595;
     }
   }
+  /*  tabbar  */
+  .home-screen {
+    .weui-tabbar {
+      background: @base-background-color;
+      line-height: 144px;
+      &:before {
+        border-top-color: #c3c3c3;
+      }
+      .tab-bar-icon {
+        height: 78px;
+        width: 78px;
+        /*padding: 28px 0;*/
+      }
+    }
+  }
+  /*  alert  */
+  .vux-alert {
+    .weui-mask {
+      background:rgba(28,28,28,0.4);
+    }
+    .weui-dialog {
+      max-width: 940px;
+      border-radius:32px;
+      box-shadow:0 8px 20px 0 rgba(0,0,0,0.07);
+      .weui-dialog__title {
+        margin-top: 70px;
+        margin-bottom: 30px;
+        font-size: 50px;
+        line-height: 70px;
+        color: @primary-text-color;
+      }
+      .weui-dialog__bd {
+        min-height: 0;
+        font-size: 44px;
+        color: @text-color-1;
+      }
+      .weui-dialog__ft {
+        margin-top: 70px;
+        line-height: 150px;
+        .weui-dialog__btn {
+          font-size: 56px;
+          color: @primary-color;
+        }
+      }
+    }
+  }
+
+  /* wallet loading */
+  //.wallet-loading {
+  //  font-size: @base-font-size;
+  //  color: @primary-color;
+  //  line-height: 130px;
+  //  animation: toggleShowHide 1s linear infinite;
+    //animation-direction:alternate;
+  //}
+
+  .game-lobby {
+    .vux-tab-container {
+      height: auto;
+      overflow: visible;
+      .vux-tab {
+        height: auto;
+        overflow: visible;
+        background: transparent;
+        .vux-tab-item {
+          background: transparent;
+          color: #5f5f5f;
+          font-size: 46px;
+          line-height: 70px;
+        }
+        .vux-tab-selected {
+          color: @primary-color;
+          border-bottom: none !important;
+        }
+        .vux-tab-ink-bar {
+          top: 80px;
+          span {
+            width: 30px  !important;
+            height: 8px;
+            border-radius: 10px;
+          }
+        }
+      }
+    }
+  }
 }
 
 /*
@@ -110,17 +196,21 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
   margin: 0;
   padding: 0;
 }
+
 a {
   color: #555;
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: none;
 }
+
 img {
   border: none;
   vertical-align: middle;
 }
+
 ol, ul, li {
   list-style: none;
 }
@@ -129,89 +219,114 @@ input::-webkit-input-placeholder {
   color: @text-color-3;
   // webkit
 }
+
 input:-moz-placeholder {
   color: @text-color-3;
   // moz4-18
 }
+
 input::-moz-placeholder {
   color: @text-color-3;
   // moz19+
 }
+
 input::-ms-input-placeholder {
   color: @text-color-3;
   // ie 10+
 }
+
 /*
   margin
  */
 .mg-40 {
   margin: 40px;
 }
+
 //top
-.mt-10{
+.mt-10 {
   margin-top: 10px;
 }
-.mt-20{
+
+.mt-20 {
   margin-top: 20px;
 }
-.mt-30{
+
+.mt-30 {
   margin-top: 30px;
 }
-.mt-40{
+
+.mt-40 {
   margin-top: 40px;
 }
-.mt-50{
+
+.mt-50 {
   margin-top: 50px;
 }
-.mt-60{
+
+.mt-60 {
   margin-top: 60px;
 }
+
 //right
-.mr-10{
+.mr-10 {
   margin-right: 10px;
 }
-.mr-20{
+
+.mr-20 {
   margin-right: 20px;
 }
-.mr-30{
+
+.mr-30 {
   margin-right: 30px;
 }
-.mr-40{
+
+.mr-40 {
   margin-right: 40px;
 }
-.mr-50{
+
+.mr-50 {
   margin-right: 50px;
 }
+
 //bottom
-.mb-10{
+.mb-10 {
   margin-bottom: 10px;
 }
-.mb-20{
+
+.mb-20 {
   margin-bottom: 20px;
 }
-.mb-30{
+
+.mb-30 {
   margin-bottom: 30px;
 }
-.mb-40{
+
+.mb-40 {
   margin-bottom: 40px;
 }
-.mb-50{
+
+.mb-50 {
   margin-bottom: 50px;
 }
+
 //left
-.ml-10{
+.ml-10 {
   margin-left: 10px;
 }
-.ml-20{
+
+.ml-20 {
   margin-left: 20px;
 }
-.ml-30{
+
+.ml-30 {
   margin-left: 30px;
 }
-.ml-40{
+
+.ml-40 {
   margin-left: 40px;
 }
-.ml-50{
+
+.ml-50 {
   margin-left: 50px;
 }
 
@@ -221,68 +336,88 @@ input::-ms-input-placeholder {
 .pd-40 {
   padding: 40px;
 }
+
 //top
-.pt-10{
+.pt-10 {
   padding-top: 10px;
 }
-.pt-20{
+
+.pt-20 {
   padding-top: 20px;
 }
-.pt-30{
+
+.pt-30 {
   padding-top: 30px;
 }
-.pt-40{
+
+.pt-40 {
   padding-top: 40px;
 }
-.pt-50{
+
+.pt-50 {
   padding-top: 50px;
 }
+
 //right
-.pr-10{
+.pr-10 {
   padding-right: 10px;
 }
-.pr-20{
+
+.pr-20 {
   padding-right: 20px;
 }
-.pr-30{
+
+.pr-30 {
   padding-right: 30px;
 }
-.pr-40{
+
+.pr-40 {
   padding-right: 40px;
 }
-.pr-50{
+
+.pr-50 {
   padding-right: 50px;
 }
+
 //bottom
-.pb-10{
+.pb-10 {
   padding-bottom: 10px;
 }
-.pb-20{
+
+.pb-20 {
   padding-bottom: 20px;
 }
-.pb-30{
+
+.pb-30 {
   padding-bottom: 30px;
 }
-.pb-40{
+
+.pb-40 {
   padding-bottom: 40px;
 }
-.pb-50{
+
+.pb-50 {
   padding-bottom: 50px;
 }
+
 //left
-.pl-10{
+.pl-10 {
   padding-left: 10px;
 }
-.pl-20{
+
+.pl-20 {
   padding-left: 20px;
 }
-.pl-30{
+
+.pl-30 {
   padding-left: 30px;
 }
-.pl-40{
+
+.pl-40 {
   padding-left: 40px;
 }
-.pl-50{
+
+.pl-50 {
   padding-left: 50px;
 }
 
@@ -292,9 +427,11 @@ align
 .tl {
   text-align: left;
 }
+
 .tc {
   text-align: center;
 }
+
 .tr {
   text-align: right;
 }
@@ -305,6 +442,7 @@ float
 .fl {
   float: left;
 }
+
 .fr {
   float: right;
 }
@@ -315,6 +453,7 @@ clear float
 .cf:after {
 
 }
+
 .cf:before, .cf:after {
   content: "";
   display: table;
@@ -334,6 +473,7 @@ clear float
 .block {
   display: block;
 }
+
 .inline-block {
   display: inline-block;
 }
@@ -349,20 +489,22 @@ position
 text color
  */
 .text-c1 {
-  color:  @text-color-1;
+  color: @text-color-1;
 }
+
 .text-c2 {
-  color:  @text-color-2;
+  color: @text-color-2;
 }
+
 .text-c3 {
-  color:  @text-color-3;
+  color: @text-color-3;
 }
 
 /*
 base box-shadow
  */
 .base-shadow {
-  box-shadow:0px 8px 20px 0px rgba(0,0,0,0.07);
+  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.07);
 }
 
 /*
@@ -378,13 +520,33 @@ base box-shadow
 warning
  */
 .warning-bg {
-  background: rgba(223,145,96,0.11);;
+  background: rgba(223, 145, 96, 0.11);;
 }
+
 .warning-text {
   color: #DF9160;
   font-size: 38px;
 }
+
 .danger-text {
   color: #D46F6E;
   font-size: 42px;
 }
+
+
+/*
+  animations
+ */
+
+@keyframes toggleShowHide {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
