--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -154,8 +154,7 @@ html, body {
   //  font-size: @base-font-size;
   //  color: @primary-color;
   //  line-height: 130px;
-  //  animation: toggleShowHide 1s linear infinite;
-    //animation-direction:alternate;
+  //  animation: toggleShowHide 1s linear infinite alternate;
   //}
 
   .game-lobby {
@@ -538,15 +537,15 @@ warning
   animations
  */
 
-@keyframes toggleShowHide {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.2;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+//@keyframes toggleShowHide {
+//  0% {
+//    opacity: 1;
+//  }
+//  50% {
+//    opacity: 0.2;
+//  }
+//  100% {
+//    opacity: 1;
+//  }
+//}
 
