--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -31,7 +31,7 @@
 @button-global-height:130px;
 @button-global-font-color:@title-color;
 @button-global-active-font-color:fade(@title-color, 80%);
-@button-global-disabled-font-color:#A4B3F0;
+@button-global-disabled-font-color:fade(@title-color, 80%);
 
 @button-default-bg-color:fade(@primary-text-color, 3.45%);
 @button-default-active-bg-color:fade(@primary-text-color, 9%);
