--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -606,3 +606,24 @@ warning
 //  }
 //}
 
+
+.search-box {
+  position: relative;
+  .search-input {
+    width: 100%;
+    font-size: @base-font-size;
+    color: @text-color-1;
+    line-height: @base-font-size;
+    box-sizing: border-box;
+    border: none;
+    padding: 30px 100px 30px 30px;
+    outline: none;
+    border-radius: @base-radius;
+  }
+  .search-icon {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    font-size: 50px;
+  }
+}
