--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -14,8 +14,8 @@
 @title-color:#FFFFFF;
 @base-background-color:#FFFFFF;
 @supplement-color1:#5BB473;
-@supplement-color2:#D46F6E;
-@supplement-color3:#DF9160;
+@supplement-color2:#D45E5D;
+@supplement-color3:#E38E58;
 
 @input-height:48px;
 @base-font-size:48px;
@@ -33,7 +33,7 @@
 @button-global-active-font-color:fade(@title-color, 80%);
 @button-global-disabled-font-color:fade(@title-color, 80%);
 
-@button-default-bg-color:fade(@primary-text-color, 3.45%);
+@button-default-bg-color: #ffffff;
 @button-default-active-bg-color:fade(@primary-text-color, 9%);
 @button-default-font-color:@primary-color;
 @button-default-active-font-color:fade(@primary-color, 80%);
@@ -47,20 +47,13 @@
  */
 @cell-label-color:@primary-text-color;
 @cell-font-size:@base-font-size;
-//@cell-tips-font-size: 40px;
-//@cell-default-arrow-color: fade(@primary-text-color, 70%);
-//@cell-disabled-arrow-color: fade(@primary-text-color, 34%);
-//@cell-default-arrow-border-width: 4px;
-//@cell-default-arrow-width: 6px;
-@cell-value-color: red;
-//@cell-placeholder-color:red;
 
 
 /*
 顶部返回条
  */
-@header-background-color:#E5EAF9;
-@header-title-color:#5F5F5F;
-@header-text-color:#5F5F5F;
-@header-arrow-color:#5F5F5F;
+@header-background-color: #2E79FE;
+@header-title-color:#ffffff;
+@header-text-color:#ffffff;
+@header-arrow-color:#ffffff;
 
