--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -257,6 +257,29 @@ input, textarea {
   }
 }
 
+/* 兑换输入框 */
+#app {
+  .conversion {
+    .panel-content {
+      .token-input {
+        margin-top: 40px;
+        .vux-x-input {
+          padding: 0;
+          .weui-input {
+            height: 80px;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: -13px 1px 29px 0 rgba(99, 99, 99, 0.13);
+            border-radius: 20px;
+            border: solid 2px #4769f5;
+            font-size: 40px;
+          }
+        }
+      }
+    }
+  }
+}
+
 /*
 resest
  */
